tests/NormalTests/paczka1/fuzzy1/12816210.err
Error in line 2: WwtO S580 27,6
Error in line 10: wiV S477 10,2
Error in line 11: wiV A475 35,5
Error in line 23: A53 S477 97,7
Error in line 33: wiV A53 67,2
Error in line 30: L5bSGGV S580 49,9
